objects/SalesOrderLineItems__c/SalesOrderLineItems__c.object-meta.xml
<CustomObject>
    <label>Sales Order Line Item</label>
    <nameField>
        <displayFormat>SOLI-{000000}</displayFormat>
        <label>Sales Order Line Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>