objects/SalesOrderLineItems__c/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Description__c</fullName>
    <label>Line Item Description</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>