objects/SalesOrderLineItems__c/fields/PriceBookId__c.field-meta.xml
<CustomField>
    <fullName>PriceBookId__c</fullName>
    <formula>Sales_Order__r.Account__r.Price_Book__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriceBookId</label>
    <type>Text</type>
</CustomField>