objects/SalesOrderLineItems__c/fields/Serialized__c.field-meta.xml
<CustomField>
    <fullName>Serialized__c</fullName>
    <formula>Product__r.Serialized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serialized</label>
    <type>Checkbox</type>
</CustomField>