objects/SalesOrderLineItems__c/fields/Total_Number_of_Product_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Product_Delivered__c</fullName>
    <label>Total Number of Product Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>