objects/SalesOrderLineItems__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Sales_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>